# Shangai

./: .gitignore  CMakeLists.txt  README.md
DynamicComputation_1/: Readme.md
DynamicComputation_1/cpp/: CMakeLists.txt
DynamicComputation_1/cpp/genfiles/: CPG_groups.csv  CPG_leg.csv  data.csv
DynamicComputation_1/cpp/src/: rk4_eu2.cpp  so2_cpg_hexapod.cpp
DynamicComputation_1/python/: 2_joint_jaco_tor.py  2_joint_jaco_velo.py  2_joint_ki.py  rk4_eu2.py  so2_cpg_hexapod.py
LocoKit/Locokit data/: discretization.txt
LocoKit/Locokit data/test 1 - low legs/: back_left_13.txt.txt  back_right_40.txt.txt  front_left_52.txt.txt  front_right_5.txt.txt  sensors.txt.txt
LocoKit/Locokit data/test 2 - high legs/: sensors.txt.txt
LocoKit/Locokit data/test 4 - high legs wood/: back-left-13.txt.txt  back-right-40.txt.txt  front-left-52.txt.txt  front-right-6.txt.txt  sensors.txt.txt
LocoKit/Locokit data/test 5 - high legs grass/: back-left-13.txt.txt  back-right-40.txt.txt  front-left-52.txt.txt  front-right-6.txt.txt  sensors.txt.txt
LocoKit/Locokit data/test 6 - high legs dirt/: back-left-13.txt.txt  back-right-40.txt.txt  front-left-52.txt.txt  front-right-6.txt.txt  sensors.txt.txt
Neuron/include/: neuron.h
Neuron/src/: neuron.cpp
PSN/include/: psn.h
PSN/src/: psn.cpp
SO2/include/: so2_cpg.h
SO2/src/: so2_cpg.cpp
TransferFunction/include/: transfer_function.h
TransferFunction/src/: transfer_function.cpp
VRN/include/: vrn.h
VRN/src/: vrn.cpp
docs/: Readme.md
genfiles/: Modified_CPG_test.csv  PSN_full_network_outputs.csv  PSN_progressive_full_network_outputs.csv  PSN_progressive_test.csv  PSN_test.csv  VRN_test.csv  test_sine_rectification.csv
include/: neuron.h  rk4.h  so2_cpg.h  vrn.h
simulation/: .history  Makefile.conf  SpringyBotController.cpp  SpringyBotController.h  SpringyBotSimulation.cpp  SpringyBotSimulation.h  run_simulation.sh
simulation/calculator/: calc.py
src/: neuron.cpp  rk4.cpp  so2_cpg.cpp  vrn.cpp
tests/: test_basic.cpp  test_psn.cpp  test_sine_rectification.cpp  test_so2.cpp  test_so2_rectification.cpp  test_vrn.cpp
